--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hello meta tag"/>
     <meta name="og:title" content="Little Lemon restaurant app"/>
+    <meta name="og:image" content="image">
+    <meta name="og:">
     <title>Document</title>
 </head>
 <body>
